--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
-
-
-
+			<div id="social-bar"></div>
 
 	</body>
 
