--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Can do comments from here on only -->
-		<title>Home</title>				
+		<title>Home</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<meta name="description" content="between 150 and 160 characters and unique each page">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
@@ -11,7 +12,61 @@
 	
 	<body>
 		
-			<!-- Content goes heer -->		
+		<main>
+			<h1>Heading</h1>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<img src="http://placehold.it/320x320" alt="'">
+
+			<img src="http://placehold.it/320x320" alt="'">
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<aside class="tip info">  <!-- NOTE 2 CLASSES for a) tip standard format and b) color ie info -->
+				<h2>Notes are handy pieces of information</h2>
+				<p>These are for the extra tidbits sometimes necessary to understand Jekyll.</p>
+				<i class="fa fa-info-circle"></i>
+			</aside>
+
+			<aside class="tip warning">
+				<h2>Warnings help you not blow things up</h2>
+				<p>Be aware of these messages if you wish to avoid certain death.</p>
+				<i class="fa fa-exclamation"></i>
+				<!-- <i class="fa fa-exclamation-triangle"></i> -->
+			</aside>
+			
+			<aside class="tip unreleased">
+				<h2>You'll see this by a feature that hasn't been released</h2>
+				<p>Some pieces of this website are for future versions of Jekyll that are not yet released.</p>
+				<i class="fa fa-exclamation-triangle"></i>
+			</aside>
+
+		</main>		
 
 
 
