Add image for the tipes

--- a/index.html
+++ b/index.html
@@ -51,19 +51,21 @@
 				<h2>Notes are handy pieces of information</h2>
 				<p>These are for the extra tidbits sometimes necessary to understand Jekyll.</p>
 				<i class="fa fa-info-circle"></i>
+				<img src="http://placehold.it/10x10" alt="">
 			</aside>
 
 			<aside class="tip warning">
 				<h2>Warnings help you not blow things up</h2>
 				<p>Be aware of these messages if you wish to avoid certain death.</p>
 				<i class="fa fa-exclamation"></i>
-				<!-- <i class="fa fa-exclamation-triangle"></i> -->
+				<img src="http://placehold.it/10x10" alt="">
 			</aside>
 			
 			<aside class="tip unreleased">
 				<h2>You'll see this by a feature that hasn't been released</h2>
 				<p>Some pieces of this website are for future versions of Jekyll that are not yet released.</p>
 				<i class="fa fa-exclamation-triangle"></i>
+				<img src="http://placehold.it/10x10" alt="">
 			</aside>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
